--- a/orangeOverseasWebApp/src/css/form.css
+++ b/orangeOverseasWebApp/src/css/form.css
@@ -461,6 +461,9 @@ img.fabricimageres5 {
   width: 190px;
   margin-left: 35px;
 }
+.grid-mobile {
+  margin-bottom: 5%!important;
+}
 /* DealerFabric css End */
 
 
